[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/UI/UITheme.tres" type="Theme" id=1]
[ext_resource path="res://Scripts/UI/LevelSelect.gd" type="Script" id=2]

[node name="LevelSelect" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -234.0
margin_right = 250.0
margin_bottom = 234.0
custom_constants/separation = 40

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 500.0
margin_bottom = 44.0
custom_constants/separation = 30
alignment = 1

[node name="Prev" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 70.0
margin_right = 154.0
margin_bottom = 44.0
text = "Prev"

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 184.0
margin_top = 10.0
margin_right = 316.0
margin_bottom = 34.0
text = "Dev Level"
align = 1

[node name="Next" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 346.0
margin_right = 430.0
margin_bottom = 44.0
text = "Next"

[node name="ViewportContainer" type="ViewportContainer" parent="VBoxContainer"]
margin_left = 100.0
margin_top = 84.0
margin_right = 400.0
margin_bottom = 384.0
rect_min_size = Vector2( 300, 300 )
size_flags_horizontal = 4
size_flags_vertical = 4
stretch = true

[node name="PreviewViewport" type="Viewport" parent="VBoxContainer/ViewportContainer"]
size = Vector2( 700, 700 )
handle_input_locally = false
usage = 0
render_target_update_mode = 3
physics_object_picking = true
gui_disable_input = true

[node name="Start Game" type="Button" parent="VBoxContainer"]
margin_top = 424.0
margin_right = 500.0
margin_bottom = 468.0
text = "Start Game"
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Prev" to="." method="_on_prev_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="VBoxContainer/Start Game" to="." method="_on_start_pressed"]
